--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,14 +7,19 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
-    "react": "^19.2.0",
+    "http-proxy-middleware": "^3.0.5",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "^19.2.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^7.9.4",
-    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
