--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "e-commerece_proshop",
   "version": "1.0.0",
   "description": "",
-  "types": "module",
   "homepage": "https://github.com/jaygray20033/E-Commerce-ProShop#readme",
   "bugs": {
     "url": "https://github.com/jaygray20033/E-Commerce-ProShop/issues"
@@ -13,9 +12,17 @@
   },
   "license": "ISC",
   "author": "",
-  "type": "commonjs",
+  "type": "module",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node backend/server.js",
+    "server": "nodemon backend/server.js",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
+  },
+  "dependencies": {
+    "concurrently": "^9.2.1",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0"
   }
 }
